--- a/index.html
+++ b/index.html
@@ -3,62 +3,209 @@
 <head>
   <meta charset="UTF-8">
   <title>Cálculo de Notas</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Responsividade -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .passou {
+      background-color: #d4edda !important; /* Verde */
+      color: #155724;
+      font-weight: bold;
+    }
+    .faltando {
+      background-color: #f8d7da !important; /* Vermelho */
+      color: #721c24;
+      font-weight: bold;
+    }
+
+    @keyframes piscarTexto {
+      0%, 50%, 100% { opacity: 1; }
+      25%, 75% { opacity: 0; }
+    }
+    .mensagem-erro {
+      color: red;
+      font-weight: bold;
+      animation: piscarTexto 2s infinite;
+      margin-top: 5px;
+    }
+
+    @keyframes piscarBotao {
+      0%, 50%, 100% { opacity: 1; }
+      25%, 75% { opacity: 0.7; }
+    }
+
+    @keyframes shake {
+      0% { transform: translateX(0); }
+      25% { transform: translateX(-5px); }
+      50% { transform: translateX(5px); }
+      75% { transform: translateX(-5px); }
+      100% { transform: translateX(0); }
+    }
+
+    .btn-vermelho {
+      background-color: #dc3545 !important;
+      border-color: #dc3545 !important;
+      transition: background-color 0.5s ease, border-color 0.5s ease;
+    }
+    .btn-vermelho.piscar {
+      animation: piscarBotao 2s infinite;
+    }
+
+    .btn-verde {
+      background-color: #28a745 !important;
+      border-color: #28a745 !important;
+      transition: background-color 0.5s ease, border-color 0.5s ease;
+    }
+
+    .shake {
+      animation: shake 0.3s;
+    }
+  </style>
 </head>
 <body class="bg-light">
 
-  <div class="container mt-4">
-    <div class="card shadow p-4">
-      <h3 class="text-center mb-4">Cálculo de Notas</h3>
+<div class="container mt-4">
+  <div class="card shadow p-4">
+    <h3 class="text-center mb-4">Cálculo de Notas por Matéria</h3>
 
-      <div class="row g-3 mb-3">
-        <div class="col-12 col-md-6">
-          <label for="n1" class="form-label">Nota N1</label>
-          <input type="number" id="n1" class="form-control" min="0" step="0.1" placeholder="Ex: 6.5">
-        </div>
-        <div class="col-12 col-md-6">
-          <label for="n2" class="form-label">Nota N2</label>
-          <input type="number" id="n2" class="form-control" min="0" step="0.1" placeholder="Ex: 7.0">
-        </div>
+    <!-- Nome da matéria -->
+    <div class="mb-3">
+      <label for="materia" class="form-label">Nome da Matéria <span class="text-danger">*</span></label>
+      <input type="text" id="materia" class="form-control" placeholder="Ex: Matemática" oninput="atualizarBotao()">
+      <div id="erroMateria" class="mensagem-erro" style="display:none;">Insira o nome da matéria!</div>
+      <div id="erroNotas" class="mensagem-erro" style="display:none;">Insira pelo menos uma nota!</div>
+    </div>
+
+    <!-- Notas -->
+    <div class="row g-3 mb-3">
+      <div class="col-12 col-md-6 col-lg-3">
+        <label for="n1" class="form-label">Nota 1º Bimestre</label>
+        <input type="number" id="n1" class="form-control" min="0" step="0.1" placeholder="Opcional" oninput="atualizarBotao()">
       </div>
-
-      <div class="row g-3 mb-3">
-        <div class="col-12 col-md-6">
-          <label for="n3" class="form-label">Nota N3</label>
-          <input type="number" id="n3" class="form-control" min="0" step="0.1" placeholder="Opcional">
-        </div>
-        <div class="col-12 col-md-6">
-          <label for="n4" class="form-label">Nota N4</label>
-          <input type="number" id="n4" class="form-control" min="0" step="0.1" placeholder="Opcional">
-        </div>
+      <div class="col-12 col-md-6 col-lg-3">
+        <label for="n2" class="form-label">Nota 2º Bimestre</label>
+        <input type="number" id="n2" class="form-control" min="0" step="0.1" placeholder="Opcional" oninput="atualizarBotao()">
       </div>
+      <div class="col-12 col-md-6 col-lg-3">
+        <label for="n3" class="form-label">Nota 3º Bimestre</label>
+        <input type="number" id="n3" class="form-control" min="0" step="0.1" placeholder="Opcional" oninput="atualizarBotao()">
+      </div>
+      <div class="col-12 col-md-6 col-lg-3">
+        <label for="n4" class="form-label">Nota 4º Bimestre</label>
+        <input type="number" id="n4" class="form-control" min="0" step="0.1" placeholder="Opcional" oninput="atualizarBotao()">
+      </div>
+    </div>
 
-      <button class="btn btn-primary w-100 mb-3" onclick="calcular()">Calcular</button>
-      <div id="resultado" class="alert text-center" role="alert"></div>
+    <button id="btnAdicionar" class="btn btn-vermelho piscar w-100 mb-3" onclick="adicionarMateria()">Adicionar Matéria</button>
+
+    <!-- Tabela de resultados -->
+    <div class="table-responsive">
+      <table class="table table-bordered table-striped text-center align-middle">
+        <thead class="table-dark">
+          <tr>
+            <th>Matéria</th>
+            <th>1º Bim</th>
+            <th>2º Bim</th>
+            <th>3º Bim</th>
+            <th>4º Bim</th>
+            <th>Resultado</th>
+            <th>Ações</th>
+          </tr>
+        </thead>
+        <tbody id="tabelaResultados"></tbody>
+      </table>
     </div>
   </div>
+</div>
 
-  <script>
-    function calcular() {
-      let n1 = parseFloat(document.getElementById("n1").value) || 0;
-      let n2 = parseFloat(document.getElementById("n2").value) || 0;
-      let n3 = parseFloat(document.getElementById("n3").value) || 0;
-      let n4 = parseFloat(document.getElementById("n4").value) || 0;
+<script>
+function atualizarBotao() {
+  let materia = document.getElementById("materia").value.trim();
+  let n1 = document.getElementById("n1").value;
+  let n2 = document.getElementById("n2").value;
+  let n3 = document.getElementById("n3").value;
+  let n4 = document.getElementById("n4").value;
+  let botao = document.getElementById("btnAdicionar");
 
-      let soma = n1 + n2 + n3 + n4;
-      let x = 24 - soma;
+  let temNota = n1 || n2 || n3 || n4;
 
-      let resultado = document.getElementById("resultado");
+  if (materia && temNota) {
+    botao.classList.remove("btn-vermelho", "piscar");
+    botao.classList.add("btn-verde");
+  } else {
+    botao.classList.remove("btn-verde");
+    botao.classList.add("btn-vermelho", "piscar");
+  }
+}
 
-      if (x <= 0) {
-        resultado.className = "alert alert-success text-center";
-        resultado.textContent = `PASSOU! (Total: ${soma.toFixed(2)} pontos)`;
-      } else {
-        resultado.className = "alert alert-warning text-center";
-        resultado.textContent = `Total: ${soma.toFixed(2)} pontos. Ainda faltam ${x.toFixed(2)} pontos para chegar a 24.`;
-      }
-    }
-  </script>
+function adicionarMateria() {
+  let materia = document.getElementById("materia").value.trim();
+  let n1 = parseFloat(document.getElementById("n1").value) || 0;
+  let n2 = parseFloat(document.getElementById("n2").value) || 0;
+  let n3 = parseFloat(document.getElementById("n3").value) || 0;
+  let n4 = parseFloat(document.getElementById("n4").value) || 0;
+
+  let erroMateria = document.getElementById("erroMateria");
+  let erroNotas = document.getElementById("erroNotas");
+  let botao = document.getElementById("btnAdicionar");
+
+  let temNota = n1 || n2 || n3 || n4;
+
+  erroMateria.style.display = materia ? "none" : "block";
+  erroNotas.style.display = temNota ? "none" : "block";
+
+  // Se não atender aos requisitos, dispara shake
+  if (!(materia && temNota)) {
+    botao.classList.remove("btn-verde");
+    botao.classList.add("btn-vermelho", "piscar", "shake");
+    setTimeout(() => botao.classList.remove("shake"), 300); // Remove após 0.3s
+    return;
+  } else {
+    botao.classList.remove("btn-vermelho", "piscar");
+    botao.classList.add("btn-verde");
+  }
+
+  let soma = n1 + n2 + n3 + n4;
+  let x = 24 - soma;
+
+  let resultadoTexto, resultadoClasse;
+  if (x <= 0) {
+    resultadoTexto = "PASSOU";
+    resultadoClasse = "passou";
+  } else {
+    resultadoTexto = `Faltam ${x.toFixed(2)}`;
+    resultadoClasse = "faltando";
+  }
+
+  let tabela = document.getElementById("tabelaResultados");
+  let linha = document.createElement("tr");
+
+  linha.innerHTML = `
+    <td>${materia}</td>
+    <td>${n1 || "-"}</td>
+    <td>${n2 || "-"}</td>
+    <td>${n3 || "-"}</td>
+    <td>${n4 || "-"}</td>
+    <td class="${resultadoClasse}">${resultadoTexto}</td>
+    <td><button class="btn btn-danger btn-sm" onclick="deletarLinha(this)">Deletar</button></td>
+  `;
+
+  tabela.appendChild(linha);
+
+  // Limpar campos
+  document.getElementById("materia").value = "";
+  document.getElementById("n1").value = "";
+  document.getElementById("n2").value = "";
+  document.getElementById("n3").value = "";
+  document.getElementById("n4").value = "";
+
+  atualizarBotao(); // Atualiza cor e efeito do botão
+}
+
+function deletarLinha(botao) {
+  let linha = botao.closest("tr");
+  linha.remove();
+}
+</script>
+
 </body>
 </html>
